# Hexxagon

./: README.md
Hexxagon/: CMakeLists.txt  main.cpp
Hexxagon/Core/Board/: Board.cpp  Board.hpp  BoardCreator.cpp  BoardCreator.hpp  Field.cpp  Field.hpp
Hexxagon/Core/TurnAndMoves/: Ai.cpp  Ai.hpp  Game.cpp  Game.hpp  Move.cpp  Move.hpp  Turn.cpp  Turn.hpp
Hexxagon/GUI/: Button.cpp  Button.hpp  Interface.cpp  Interface.hpp  Score.cpp  Score.hpp
